[package]
name = "bwbio"
version = "0.1.0"
edition = "2024"
description = "A lightweight, native handler for the Bitwarden browser extension's biometric authentication."
readme = "README.md"
repository = "https://github.com/Aalivexy/bwbio"
license = "GPL-3.0-or-later"

[dependencies]
aes = "0.9.0-rc.2"
anyhow = "1"
argh = "0.1"
base64 = "0.22"
cbc = { version = "0.2.0-rc.2", features = ["alloc"] }
dialoguer = "0.12"
hmac = "0.13.0-rc.4"
rand = "0.10.0-rc.8"
rsa = "0.10.0-rc.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11.0-rc.4"
sha2 = "0.11.0-rc.4"
subtle = "2"
windows = { version = "0.62", features = [
  "Security_Credentials_UI",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
windows-future = "0.3"
windows-registry = "0.6"
windows-strings = "0.5"

[profile.release]
strip = true
lto = true
